# mail-server

./: .codexignore  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  client_test.py  docker-compose.yml
config/: mailforge.json
dashboard/: Dockerfile  app.py
dashboard/templates/: index.html
docs/: AGENT_HANDOFF.md  ARCHITECTURE_GUIDE.md  MAILFORGE_OVERVIEW_SUMMARY.md  PROJECT_PLAN.md  benchmark_report.md
include/mailforge/app/: Application.hpp
include/mailforge/config/: ConfigManager.hpp  ServerConfig.hpp
include/mailforge/database/: DatabaseManager.hpp
include/mailforge/logging/: Logger.hpp
include/mailforge/mime/: MailMessage.hpp  MimeParser.hpp
include/mailforge/network/: ClientSession.hpp  TcpListener.hpp
include/mailforge/pop3/: Pop3Server.hpp  Pop3StateMachine.hpp
include/mailforge/queue/: QueueManager.hpp
include/mailforge/smtp/: SMTPCommand.hpp  SMTPParser.hpp  SMTPStateMachine.hpp  SmtpClient.hpp
include/mailforge/storage/: MailStorage.hpp
include/mailforge/utils/: Base64.hpp
src/: main.cpp
src/app/: Application.cpp
src/config/: ConfigManager.cpp
src/database/: DatabaseManager.cpp
src/logging/: Logger.cpp
src/mime/: MailMessage.cpp  MimeParser.cpp
src/network/: ClientSession.cpp  TcpListener.cpp
src/pop3/: Pop3Server.cpp  Pop3StateMachine.cpp
src/queue/: QueueManager.cpp
src/smtp/: SMTPParser.cpp  SMTPStateMachine.cpp  SmtpClient.cpp
src/storage/: MailStorage.cpp
src/utils/: Base64.cpp
tests/: benchmark.py  integration_tests.cpp  smoke_tests.cpp
